# MyApplication

./: .gitignore  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NativeLib-test.cpp  NativeLib.cpp  NativeLib_PAS.cpp  native-lib.cpp
app/src/main/cpp/Include/: Autotest.hpp  FindA4.h  FindA4.hpp  Tabu.h  Tabu.hpp  Vector.h  Vector.hpp
app/src/main/cpp/Source/: AutoTest.cpp  FindA4.cpp  FindA4O.cpp  GetA4.cpp  GetCamPos.cpp  GetKrit.cpp  Init.cpp  MakeBest.cpp  Tabu.cpp  UpdateOreint.cpp  Vector.cpp  VectorO.cpp
app/src/main/java/com/example/myapplication/: MainActivity.kt
app/src/main/java/com/fittin/fa4Lib/: Finder.kt
gradle/wrapper/: gradle-wrapper.properties
